<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">BoilerLabs</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_lab_view">Lab Details</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_lab_list">List of Labs</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="listlab">Lab List</string>
    <string name="fav">Favorite +</string>
    <string name="map">Map</string>
    <string name="preferences">Favorite Labs</string>
    <string name="closest">Closest</string>
    <string name="preferences_content">Preferences will be displayed here!!</string>
    <string name="listlab_content">List of labs will be displayed here!!</string>
    <string name="labview_content">Closest Lab and more will be displayed here!!</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="title_activity_cslabs">CS Labs</string>
    <string name="title_activity_cslab">CSlab</string>
    <string name="status">Status : </string>
    <string name="type">Type : </string>
	<string name="normal_map">Normal View </string>
	<string name="hybrid_map">Hybrid View </string>
	<string name="walking">Walking Directions Mode </string>
	<string name="driving">Driving Directions Mode </string>
	<string name="onlinestring">Online </string>
	<string name="offlinestring">Offline </string>
	<string name="load">Loading</string>
</resources>
