<menu xmlns:android="http://schemas.android.com/apk/res/android" >

   <!--   <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/> -->
    
    <item 
        android:id="@+id/walk"
        android:showAsAction="never"
        android:title="@string/walking"
   			/>
    
    <item 
        android:id="@+id/drive"
        android:showAsAction="never"
        android:title="@string/driving"
   			/>
    
    <item
        android:id="@+id/online"
        android:showAsAction="never"
        android:title="@string/onlinestring"
        />
	<item
        android:id="@+id/offline"
        android:showAsAction="never"
        android:title="@string/offlinestring"
        />
</menu>
