<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/buttonlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonpref"
        android:layout_alignRight="@+id/buttonpref"
        android:layout_below="@+id/buttonclosest"
        android:layout_marginTop="24dp"
        android:text="@string/listlab" />

    <Button
        android:id="@+id/buttonclosest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/buttonpref"
        android:layout_alignRight="@+id/buttonpref"
        android:layout_marginTop="60dp"
        android:text="@string/closest" />

    <Button
        android:id="@+id/buttonmap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonpref"
        android:layout_alignRight="@+id/buttonpref"
        android:layout_below="@+id/buttonlist"
        android:layout_marginTop="36dp"
        android:text="@string/map" />

    <Button
        android:id="@+id/buttonpref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonmap"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/preferences" />

    <Button
        android:id="@+id/mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonpref"
        android:layout_alignRight="@+id/buttonpref"
        android:layout_below="@+id/buttonpref"
        android:layout_marginTop="20dp"
        android:text="@string/online" />

</RelativeLayout>
