<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/oName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="16dp"
        android:text="Large Text" 
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/oStatusl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/oName"
        android:layout_below="@+id/oName"
        android:layout_marginTop="15dp"
        android:gravity="right"
        android:text="@string/status" />

    <TextView
        android:id="@+id/oStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/oStatusl"
        android:layout_alignRight="@+id/oName"
        android:text="TextView" />

    <TextView
        android:id="@+id/oTypel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/oStatusl"
        android:layout_alignRight="@+id/oStatusl"
        android:layout_below="@+id/oStatusl"
        android:layout_marginTop="15dp"
        android:gravity="right"
        android:text="@string/type" />

    <TextView
        android:id="@+id/oType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/oTypel"
        android:layout_alignBottom="@+id/oTypel"
        android:layout_alignLeft="@+id/oStatus"
        android:text="TextView" />

    <TextView
        android:id="@+id/oComp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/oTypel"
        android:layout_below="@+id/oTypel"
        android:layout_marginTop="16dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/oIU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/oComp"
        android:layout_below="@+id/oComp"
        android:layout_marginTop="16dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/oPrinter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/oIU"
        android:layout_below="@+id/oIU"
        android:layout_marginTop="16dp"
        android:text="" />

    <TextView
        android:id="@+id/oScanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/oIU"
        android:layout_below="@+id/oPrinter"
        android:layout_marginTop="16dp"
        android:text="" />

<fragment
    android:id="@+id/map3"
    android:name="com.google.android.gms.maps.MapFragment"
    android:layout_width="match_parent"
    android:layout_height="200dip"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/oScanner" />

<Button
    android:id="@+id/addtofav2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_alignTop="@+id/oName"
    android:layout_marginRight="18dp"
    android:text="@string/fav" />

</RelativeLayout>
